# cookiecutter_cpp

./: .pre-commit-config.yaml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
app/: CMakeLists.txt  cookiecutter_cpp_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst
include/cookiecutter_cpp/: cookiecutter_cpp.hpp
src/: CMakeLists.txt  cookiecutter_cpp.cpp
tests/: CMakeLists.txt  cookiecutter_cpp_t.cpp
